--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  height: '100%';
+  width: '99%';
+  border: 2px solid black;
+  padding: 2px 10px 10px 10px;
+  margin: 2px 2px 10px 2px;
 }
 
 .App-logo {
